# EF-grant

./: .gitignore  README.md
groth16/: README.md  iszero10.circom  readme.md
groth16/10-2/: iszero10-2.circom
groth16/circuits/: iszero.circom  readme.md
groth16/circuits/1/: iszero1.circom
groth16/circuits/2/: bench2-prover.sh  bench2.sh  iszero2.circom
groth16/circuits/3/: iszero3.circom
groth16/circuits/4/: iszero4.circom
groth16/circuits/5/: iszero5.circom
groth16/circuits/benchmarks/: bench-generic-time.sh  bench1.sh  bench2.sh  bench3.sh  bench4.sh  bench5.sh  iszero_generic.circom
groth16/circuits/pot/: pot12_0001.ptau  pot20_0001.ptau  pot20_final.ptau
groth16/iszero/: bench-iszero.sh  input.json  iszero.circom  iszeroREADME.md
groth16/pot/: pot20_0000.ptau
groth16/range/: bench-range.sh  input.json  range.circom  rangeREADME.md
halo2/: Cargo.toml  readme.md
halo2/benches/: ecdsa.rs  ecdsaREADME.md  iszero-mock.rs  iszero.rs  iszero2.rs  iszero3.rs  iszero6.rs  iszeroREADME.md  keccak.rs  keccakREADME.md  keccak_bit.rs  keccak_packed.rs  range.rs  rangeREADME.md  readme.md
halo2/src/: instructions.rs  lib.rs  main_gate.rs  range.rs  range2.rs
halo2/tests/: ecdsa_example.rs  range.rs  range_example.rs  simple-example.rs  tutorial.rs  tutorial_prover.rs  tutorial_test.rs  tutorial_test2.rs
shock/: Cargo.toml
