[package]
name = "halo2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_10_22"   }
halo2wrong = { git = "https://github.com/privacy-scaling-explorations/halo2wrong.git", default-features = false, tag = "v2022_10_22"  }
ecdsa = { git = "https://github.com/privacy-scaling-explorations/halo2wrong.git", tag = "v2022_10_22"  }
ecc = { git = "https://github.com/privacy-scaling-explorations/halo2wrong.git", tag = "v2022_10_22"  }
integer = { git = "https://github.com/privacy-scaling-explorations/halo2wrong.git", tag = "v2022_10_22"  }
maingate = { git = "https://github.com/privacy-scaling-explorations/halo2wrong.git", tag = "v2022_10_22"  }
zkevm-circuits = { git = "https://github.com/EDGDrummond/zkevm-circuits.git", rev="1e8637233bb53c12f1b12937e73f863c444e4e9e" }
rayon = "1.5.1"
rand_core = { version = "0.6", default-features = false }
pairing = { git = 'https://github.com/EDGDrummond/pairing', package = "pairing_bn256"} 
num-integer = "0.1.45"
num-bigint = "0.4.3"
num-traits = "0.2.15"
group = "0.12.0"
rand = "0.8.5"
ff = "0.12"

[dev-dependencies]
assert_matches = "1.5"
criterion = "0.3"

[[bench]]
name = "iszero"
harness = false

[[bench]]
name = "range"
harness = false

[[bench]]
name = "ecdsa"
harness = false

[[bench]]
name = "keccak_bit"
harness = false

[[bench]]
name = "keccak_packed"
harness = false
